--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -9,6 +9,6 @@
 <body>
     {{title}}
     <br/>
-    <img width="120" height="120" src="/public/images/img.jpeg" alt="">
+    <img width="120" height="120" src="/images/img.jpeg" alt="">
 </body>
 </html>
