--- a/views/front/index.html
+++ b/views/front/index.html
@@ -40,7 +40,7 @@
             
         <%}%>
     </div>
-    <a href="http://www.beian.gov.cn" class="footer">
+    <a href="https://beian.miit.gov.cn/" class="footer">
         粤ICP备20036510号-1
     </a>
 </body>
